--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div id="skill">
-        <h1 style="margin-top: 150px; margin-bottom: 50px;">Skills</h1>
+        <h1 style="">Skills</h1>
         <div class="skillslist">
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
