--- a/calc/index.html
+++ b/calc/index.html
@@ -16,7 +16,7 @@
                 <button class="numbers" onclick="numbers('9')">9</button>
                 <button class="numbers" onclick="numbers('8')">8</button>
                 <button class="numbers" onclick="numbers('7')">7</button>
-                <button class="numbers" onclick="clearDisplay()">C</button>
+                <button class="numbers" style="background-color: rgb(244, 169, 56);" onclick="clearDisplay()">C</button>
                 <button class="numbers" onclick="numbers('6')">6</button>
                 <button class="numbers" onclick="numbers('5')">5</button>
                 <button class="numbers" onclick="numbers('4')">4</button>
